--- a/readme.html
+++ b/readme.html
@@ -3,6 +3,8 @@
   src: url(https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.woff) format('woff');
 }
 
+  <link rel="stylesheet" href="style.css">
+
 * {
     box-sizing: border-box;
 }
